--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "author": "Giuseppe Tufo <pepj2000@gmail.com>",
   "main": "bin/www.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config frontend/build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config src/build/webpack.dev.conf.js",
     "start": "npm run build && node bin/www",
-    "unit": "cross-env BABEL_ENV=test karma start frontend/test/unit/karma.conf.js --single-run",
-    "e2e": "node frontend/test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue frontend/src frontend/test/unit frontend/test/e2e/specs",
-    "build": "node frontend/build/build.js",
+    "unit": "cross-env BABEL_ENV=test karma start src/test/unit/karma.conf.js --single-run",
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src/src src/test/unit",
+    "build": "node src/build/build.js",
     "precommit": "npm run lint",
     "prepush": "npm run test",
     "report-coverage": "codecov -t 6ce34ba8-3d25-4491-abd5-cae968c3ec7c",
@@ -25,10 +24,10 @@
     "debug": "~2.6.9",
     "express": "^4.16.3",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^7.2.0",
     "moment": "^2.21.0",
     "morgan": "~1.9.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.1",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
@@ -38,27 +37,29 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "autoprefixer": "^7.1.5",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-jsx-v-model": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "chalk": "^2.0.1",
+    "chalk": "^2.1.0",
     "chromedriver": "^2.27.2",
-    "codecov": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
+    "codecov": "^3.0.3",
+    "connect-history-api-fallback": "^1.4.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "cross-env": "^5.0.5",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
     "es6-promise": "^4.2.4",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.0",
@@ -67,46 +68,52 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-vue": "^4.0.0",
+    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "geckodriver": "^1.11.0",
     "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
+    "http-proxy-middleware": "^0.17.4",
+    "inject-loader": "^3.0.1",
+    "karma": "^1.7.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-shim": "^1.5.0",
+    "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
-    "nightwatch": "^0.9.12",
+    "karma-webpack": "^2.0.5",
+    "mocha": "^4.0.1",
     "node-notifier": "^5.1.2",
+    "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
+    "ora": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.15",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^4.0.0",
-    "sinon-chai": "^2.8.0",
+    "semver": "^5.4.1",
+    "shelljs": "^0.7.8",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "uglify-es": "^3.1.3",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
